# pico

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
scripts/: bundle-macos.sh  codesign-macos.sh  download-fixtures.sh  download-kokoro.sh  download-models.sh
src/: archive.rs  audio.rs  gui.rs  macos_perm.rs  main.rs  mt.rs  mt_cache.rs  output.rs  pitch.rs  state.rs  stt.rs  tts.rs  vad.rs
tests/: audio_features.rs  stt_smoke.rs  translate_bench.rs  translate_smoke.rs
tests/fixtures/transcripts/: fdr_war.txt  jfk_inaugural.txt  mussolini_war.txt  reagan_stt_en.txt
tests/snapshots/: stt_smoke__run_fixture@evita_ultimo_discurso.snap  stt_smoke__run_fixture@fdr_war.snap  stt_smoke__run_fixture@jfk_inaugural.snap  stt_smoke__run_fixture@mussolini_war.snap  stt_smoke__run_fixture@reagan_berlin.snap  translate_smoke__reagan_en_to_es@reagan_es.snap
