[package]
name = "pico"
version = "0.1.0"
edition = "2021"
description = "Real-time English → French/Spanish/Italian speech translation on multichannel audio."
license = "MIT"
repository = "https://github.com/turinglabsorg/pico"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
cpal = "0.15"
crossbeam-channel = "0.5"
dotenvy = "0.15"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.30"
futures = "0.3"
hound = "3"
# Pinned to match tts-rs 2026.2.3 (breaks on rc.12 due to Error<T> generic change)
ort = "=2.0.0-rc.11"
ringbuf = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tts-rs = { version = "2026.2.3", features = ["kokoro"] }
whisper-rs = { version = "0.14", features = ["metal"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Used to call AVCaptureDevice.requestAccess(for: .audio) at startup so the
# OS shows the standard microphone consent prompt instead of silently
# delivering zeroed buffers.
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
block2 = "0.6"

[dev-dependencies]
insta = "1"

[profile.release]
lto = "thin"
codegen-units = 1
